2021-06-02 Thomas Trepl <thomas@linuxfromscratch.org>
   * Prevent sendsignals from killing an active mdmon

2021-04-28 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Make check_signal more robust. 
   * Use a better methog for killproc to remove a dead pid file.
   * Clarify what signals killproc accepts.
   * Thanks to input an ddiscussion from Scott Andrews.

2021-02-01 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Tweak mountfs to properly exit when an error is found.

2021-01-13 Xi Ruoyao <xry111@mengyan1223.wang>
   * Use /run instead of deprecated /var/run

2020-10-02 DJ Lucas <dj@linuxfromscratch.org>
   * make $local_fs a Should-Stop dependency of swap to allow clean install

2020-08-02 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Fix a minor display problem in checkfs

2019-10-31 DJ Lucas <dj@linuxfromscratch.org>
   * Syslog should not start in runlevel 2 due to network logging
   * Remove errant swap dependency for checkfs

2019-10-04 DJ Lucas <dj@linuxfromscratch.org>
   * Additional updates to facilities in LSB headers to keep proper order
   * Network script depends on firewall scripts from BLFS if activated

2019-09-02 DJ Lucas <dj@linuxfromscratch.org>
   * Update facilities in LSB headers

2015-06-24 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Unmount network file systems before bringing down the network
   * Spell out some mount/umount options

2017-03-25 DJ Lucas <dj@linuxfromscratch.org>
   * Bash-4.4 changes no longer allow continue in function to pass to calling
     loop.

2015-02-22 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Cosmetic changes to network scripts' output

2015-02-08 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Modify ipv4-static to support ethernet labels
   * Output a newline if an interface is skipped during boot

2014-12-24 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Clarify rationale for sysklog run levels

2014-11-10 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Make /run/lock have 1777 permissions
