@@ -43,6 +43,15 @@
     appropriate for the entry or if needed the entire day's listitem.
     -->
     <listitem revision="sysv">
+      <para>2021-06-08</para>
+      <itemizedlist>
+        <listitem>
+          <para>[bdubbs] - Make shutting down the netwrok more robust.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem revision="sysv">
       <para>2021-06-02</para>
       <itemizedlist>
         <listitem>
