@@ -1,3 +1,7 @@
+2021-06-08 Bruce Dubbs <bdubbs@linuxfromscratch.org>
+   * When shutting down the network, ignore invalid interfaces
+     or interfaces that are not UP.
+
 2021-06-02 Thomas Trepl <thomas@linuxfromscratch.org>
    * Prevent sendsignals from killing an active mdmon
 
@@ -5,7 +9,7 @@
    * Make check_signal more robust. 
    * Use a better methog for killproc to remove a dead pid file.
    * Clarify what signals killproc accepts.
-   * Thanks to input an ddiscussion from Scott Andrews.
+   * Thanks to input and discussion from Scott Andrews.
 
 2021-02-01 Bruce Dubbs <bdubbs@linuxfromscratch.org>
    * Tweak mountfs to properly exit when an error is found.
